Refactor: make constant easier to understand

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ function onload() {
 }
 
 function reloadFlatastic() {
-    setTimeout(function() { onload(); }, 120 * 1000);
+    setTimeout(function() { onload(); }, 2 * 60 * 1000);
     var flatastic = document.createElement('object');
     flatastic.classList.add('two');
     flatastic.type = "text/html";
