--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 <head>
 <style>
+.black {
+    z-index: -2;
+    background-color: #000000;
+    width: 100%;
+    height: 100%;
+}
 .wrapper {
   display: grid;
   grid-template-columns: auto auto;
@@ -34,7 +40,24 @@
 </style>
 <script>
 function onload() {
+console.log('ontouchstart' in document.documentElement);
+    initFadeTimeout();
     reloadFlatastic();
+}
+
+function setBlack() {
+    document.getElementById('black-div').classList.add('black')
+}
+
+var timeToBlack = 3 * 1000;
+var interval = window.setInterval(setBlack, timeToBlack);
+
+function initFadeTimeout() {
+    window.addEventListener('touchstart', function() {
+        window.clearInterval(interval);
+        interval = window.setInterval(setBlack, timeToBlack);
+        document.getElementById('black-div').classList.remove('black');
+    });
 }
 
 function reloadFlatastic() {
@@ -48,11 +71,11 @@ function reloadFlatastic() {
     while (flatasticDiv.firstChild !== flatasticDiv.lastChild) {
         flatasticDiv.removeChild(flatasticDiv.firstChild);
     }
-
 }
 </script>
 </head>
 <body onload="onload()">
+<div id="black-div"></div>
 <div class="wrapper">
 <object class="one" type="text/html" data="vvs.html">
 </object>
