--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <html>
 <head>
 <style>
-.black {
-    z-index: -2;
-    background-color: #000000;
+.fade-out {
+    background: rgba(0, 0, 0, 1.0);
     width: 100%;
     height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
+    overflow-y: hidden;
+    transition: 10s;
 }
+
+.fade-in {
+    opacity: 0;
+}
+
 .wrapper {
   display: grid;
   grid-template-columns: auto auto;
@@ -34,6 +45,7 @@
 }
 .copyright {
   position: absolute;
+  z-index: -1;
   bottom: 0px;
   font-size: xx-small;
 }
@@ -44,19 +56,23 @@ console.log('ontouchstart' in document.documentElement);
     initFadeTimeout();
     reloadFlatastic();
 }
-
-function setBlack() {
-    document.getElementById('black-div').classList.add('black')
+function fadeOut() {
+    document.getElementById('black-div').classList.remove('fade-in');
+    document.getElementById('black-div').classList.add('fade-out');
 }
 
-var timeToBlack = 3 * 1000;
-var interval = window.setInterval(setBlack, timeToBlack);
+function fadeIn() {
+    document.getElementById('black-div').classList.remove('fade-out');
+    document.getElementById('black-div').classList.add('fade-in');
+}
+
 
 function initFadeTimeout() {
+    var delayBeforeFade = 10 * 1000;
+    setTimeout(fadeOut, delayBeforeFade);
     window.addEventListener('touchstart', function() {
-        window.clearInterval(interval);
-        interval = window.setInterval(setBlack, timeToBlack);
-        document.getElementById('black-div').classList.remove('black');
+        fadeIn();
+        setTimeout(fadeOut, delayBeforeFade);
     });
 }
 
@@ -75,7 +91,7 @@ function reloadFlatastic() {
 </script>
 </head>
 <body onload="onload()">
-<div id="black-div"></div>
+<div id="black-div" class="fade-in"></div>
 <div class="wrapper">
 <object class="one" type="text/html" data="vvs.html">
 </object>
@@ -87,4 +103,3 @@ function reloadFlatastic() {
 <div class="copyright">(c) googol42 - Licensed under <a href="http://www.gnu.org/licenses/agpl-3.0.en.html">AGPL</a> Version 3 or any later Version - <a href="https://github.com/googol42/vvs-station-monitor/archive/gh-pages.zip">Source</a> - Proudly made using Linux, git and vim.</p>
 </body>
 </html>
-
