Fix: also include Leinfelden

--- a/vvs.html
+++ b/vvs.html
@@ -42,7 +42,7 @@
             var stations = [
                         ['5000008', ['Vaihingen']],
                         ['5006009', ['Mineralbäder', 'Fellbach', 'Fellbach Lutherkirche']],
-                        ['5002578', ['Rohr Mitte']],
+                        ['5002578', ['Rohr Mitte', 'Leinfelden']],
                         ['5006027', ['']]
             ];
 
