--- a/index.html
+++ b/index.html
@@ -1,45 +1,27 @@
+<!DOCTYPE html>
 <html>
 <head>
+    <title>WG Monitor</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" type="text/css" href="fade.css">
+    <script src="fade.js"></script>
 <style>
-.fade-out {
-    background: rgba(0, 0, 0, 1.0);
-    width: 100%;
-    height: 100%;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    position: fixed;
-    overflow-y: hidden;
-    transition: 10s;
-}
-
-.fade-in {
-    opacity: 0;
-}
-
 .wrapper {
-  display: grid;
+  display: flex;
   grid-template-columns: auto auto;
   grid-template-rows: auto auto;
-  height: 100%;
+  height: 95%;
   width: 100%;
 }
-.one {
+.left {
   grid-column: 1;
   grid-row: 1;
   height: 100%;
   width: 100%;
 }
-.two {
+.right {
   grid-column: 2;
   grid-row: 1;
-  height: 100%;
-  width: 95%;
-}
-.three {
-  grid-column: 1;
-  grid-row: 2;
   height: 100%;
   width: 100%;
 }
@@ -49,38 +31,20 @@
   bottom: 0px;
   font-size: xx-small;
 }
+html, body {
+    height: 100%;
+}
 </style>
 <script>
 function onload() {
-    if ('ontouchstart' in document.documentElement) {
-        initFadeTimeout();
-    }
-    //reloadFlatastic();
-}
-function fadeOut() {
-    document.getElementById('black-div').classList.remove('fade-in');
-    document.getElementById('black-div').classList.add('fade-out');
-}
-
-function fadeIn() {
-    document.getElementById('black-div').classList.remove('fade-out');
-    document.getElementById('black-div').classList.add('fade-in');
-}
-
-
-function initFadeTimeout() {
-    var delayBeforeFade = 10 * 1000;
-    setTimeout(fadeOut, delayBeforeFade);
-    window.addEventListener('touchstart', function() {
-        fadeIn();
-        setTimeout(fadeOut, delayBeforeFade);
-    });
+    onloadFade();
+    reloadFlatastic();
 }
 
 function reloadFlatastic() {
     setTimeout(function() { reloadFlatastic(); }, 2 * 60 * 1000);
     var flatastic = document.createElement('object');
-    flatastic.classList.add('two');
+    flatastic.classList.add('right');
     flatastic.type = "text/html";
     flatastic.data = "https://flatastic-app.com/webapp/";
     var flatasticDiv = document.getElementById('flatastic-div');
@@ -93,13 +57,10 @@ function reloadFlatastic() {
 </head>
 <body onload="onload()">
 <div id="black-div" class="fade-in"></div>
-<!-- <div class="wrapper"> -->
-    <object class="one" type="text/html" data="vvs.html"></object>
-    <!-- <div id="flatastic-div" class="two"></div> -->
-    <!--
-    <iframe class="three" src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d42081.78449387222!2d9.120622676646512!3d48.76066639504889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x4799dc8b796ddf6d%3A0x51ffd3c8d0ba000!2sKaltental%2C+Stuttgart!3m2!1d48.7439901!2d9.128565499999999!4m5!1s0x4799db35938379e7%3A0xe361d95cad67428e!2stabakstube!3m2!1d48.777544999999996!2d9.178186!5e0!3m2!1sde!2sde!4v1517071420727" allowfullscreen></iframe>
--->
-<!-- </div> -->
+<div class="wrapper">
+    <object class="left" type="text/html" data="vvs.html"></object>
+    <div id="flatastic-div" class="right"></div>
+</div>
 <div class="copyright">(c) googol42 - Licensed under <a href="http://www.gnu.org/licenses/agpl-3.0.en.html">AGPL</a> Version 3 or any later Version - <a href="https://github.com/googol42/vvs-station-monitor/archive/gh-pages.zip">Source</a> - Proudly made using Linux, git and vim.</p></div>
 </body>
 </html>
