--- a/vvs.html
+++ b/vvs.html
@@ -3,39 +3,7 @@
 <head>
     <title>VVS Station Monitor</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <style>
-    .station {
-        margin-bottom: 15px;
-    }
-    .stationName {
-        background-color: #FF6600;
-        border-radius: 25px;
-        padding-left: 9px; <!-- prevent text floating out of the colored area -->
-        padding-right: 9px; <!-- prevent text floating out of the colored area -->
-        margin-bottom: 5px;
-    }
-    .connection {
-        margin-left: 18px;
-    }
-    .time-span {
-        width: 90px;
-        display: inline-block;
-    }
-    .delay {
-
-    }
-    .delayGreen {
-        color: #006400;
-    }
-    .delayOrange {
-        color: #FFA500;
-        font-weight: bold;
-    }
-    .delayRed {
-        color: #DC143C;
-        font-weight: bold;
-    }
-    </style>
+    <link rel="stylesheet" type="text/css" href="vvs.css">
     <script>
         /* Engelboldstraße 5000008 */
         /* Kaltental 5006009 */
