Fix: disable flatastic again

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ html, body {
 <script>
 function onload() {
     onloadFade();
-    reloadFlatastic();
+    <!-- reloadFlatastic(); -->
 }
 
 function reloadFlatastic() {
@@ -59,7 +59,7 @@ function reloadFlatastic() {
 <div id="black-div" class="fade-in"></div>
 <div class="wrapper">
     <object class="left" type="text/html" data="vvs.html"></object>
-    <div id="flatastic-div" class="right"></div>
+    <!-- <div id="flatastic-div" class="right"></div> -->
 </div>
 <div class="copyright">(c) googol42 - Licensed under <a href="http://www.gnu.org/licenses/agpl-3.0.en.html">AGPL</a> Version 3 or any later Version - <a href="https://github.com/googol42/vvs-station-monitor/archive/gh-pages.zip">Source</a> - Proudly made using Linux, git and vim.</p></div>
 </body>
