--- a/vvs.html
+++ b/vvs.html
@@ -12,7 +12,7 @@
         function init() {
             var stations = [
                         ['5000008', ['Vaihingen', 'Vaihingen Bf'], ['']],
-                        ['5006009', ['Mineralbäder', 'Fellbach', 'Fellbach Lutherkirche'], ['Heslach', 'Vaihingen', 'Vaihingen Bf', '- Betriebsfahrt -']],
+                        ['5006009', ['Mineralbäder', 'Fellbach', 'Fellbach Lutherkirche', 'Heslach Vogelrain'], ['Heslach', 'Vaihingen', 'Vaihingen Bf', '- Betriebsfahrt -']],
                         ['5002578', ['Rohr Mitte', 'Leinfelden'], ['']],
                         ['5006027', [''], ['']]
             ];
