--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@ function reloadFlatastic() {
 </head>
 <body onload="onload()">
 <div id="black-div" class="fade-in"></div>
-<div class="wrapper">
+<!-- <div class="wrapper"> -->
     <object class="left" type="text/html" data="vvs.html"></object>
     <!-- <div id="flatastic-div" class="right"></div> -->
-</div>
+<!-- </div> -->
 <div class="copyright">(c) googol42 - Licensed under <a href="http://www.gnu.org/licenses/agpl-3.0.en.html">AGPL</a> Version 3 or any later Version - <a href="https://github.com/googol42/vvs-station-monitor/archive/gh-pages.zip">Source</a> - Proudly made using Linux, git and vim.</p></div>
 </body>
 </html>
