Feature: also show connections to Heslach

--- a/vvs.html
+++ b/vvs.html
@@ -11,7 +11,7 @@
         /* Österfeld */
         var stations = [
                     ['5000008', ['Vaihingen', 'Vaihingen Bf'], ['']],
-                    ['5006009', ['Mineralbäder', 'Fellbach', 'Fellbach Lutherkirche', 'Heslach Vogelrain'], ['Heslach', 'Vaihingen', 'Vaihingen Bf', '- Betriebsfahrt -']],
+                    ['5006009', ['Mineralbäder', 'Fellbach', 'Fellbach Lutherkirche', 'Heslach Vogelrain', 'Heslach'], ['Vaihingen', 'Vaihingen Bf', '- Betriebsfahrt -']],
                     ['5002578', ['Rohr Mitte', 'Leinfelden'], ['']],
                     ['5006027', [''], ['']]
         ];
