--- a/vvs.html
+++ b/vvs.html
@@ -4,6 +4,8 @@
     <title>VVS Station Monitor</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="vvs.css">
+    <link rel="stylesheet" type="text/css" href="fade.css">
+    <script src="fade.js"></script>
     <script>
         /* Engelboldstraße 5000008 */
         /* Kaltental 5006009 */
@@ -17,6 +19,7 @@
         ];
 
         function init() {
+            onloadFade();
             for (var index = 0; index < stations.length; index++) {
               var stationDiv = document.createElement('div');
               stationDiv.id = stations[index][0];
@@ -178,6 +181,7 @@
     </script>
 </head>
 <body onload="init()">
+<div id="black-div" class="fade-in"></div>
 <div>
     <div id="update" class="update"></div>
     <div id="clock" class="clock"></div>
@@ -187,5 +191,6 @@
     <div id="debugging"></div>
     <ul id="debuggingUl"></ul>
 </div>
+<div class="copyright">(c) googol42 - Licensed under <a href="http://www.gnu.org/licenses/agpl-3.0.en.html">AGPL</a> Version 3 or any later Version - <a href="https://github.com/googol42/vvs-station-monitor/archive/gh-pages.zip">Source</a> - Proudly made using Linux, git and vim.</p></div>
 </body>
 </html>
