--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>VVS Station Monitor</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="mobile-web-app-capable" content="yes">
     <link rel="stylesheet" type="text/css" href="vvs.css">
     <script>
         /* Engelboldstraße 5000008 */
